; ModuleID = '/home/carl/AnghaBench/php-src/ext/reflection/extr_php_reflection.c_is_ignorable_reference.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/reflection/extr_php_reflection.c_is_ignorable_reference.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IS_ARRAY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @is_ignorable_reference to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_ignorable_reference(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = call i32 @Z_REFCOUNT_P(i32* %6)
  %8 = icmp ne i32 %7, 1
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

10:                                               ; preds = %2
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @Z_REFVAL_P(i32* %11)
  %13 = call i64 @Z_TYPE_P(i32 %12)
  %14 = load i64, i64* @IS_ARRAY, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %22, label %16

16:                                               ; preds = %10
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @Z_REFVAL_P(i32* %17)
  %19 = call i32* @Z_ARRVAL_P(i32 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = icmp ne i32* %19, %20
  br label %22

22:                                               ; preds = %16, %10
  %23 = phi i1 [ true, %10 ], [ %21, %16 ]
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %22, %9
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @Z_REFCOUNT_P(i32*) #1

declare dso_local i64 @Z_TYPE_P(i32) #1

declare dso_local i32 @Z_REFVAL_P(i32*) #1

declare dso_local i32* @Z_ARRVAL_P(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
